fixed header bouncing on vertical scroll to top on iphones

--- a/src/resources/styles/header-main.sass
+++ b/src/resources/styles/header-main.sass
@@ -7,14 +7,6 @@ $header_height: 55
 $header_logo_height: 25
 $header_logo_padding: ($header_height - $header_logo_height) / 2
 
-.debug-lorem
-    position: fixed
-    bottom: 0
-    left: 0
-    z-index: 20
-    background-color: rebeccapurple
-    padding: 10px
-
 .header-main-spacer
     width: 100%
     height: $header_height + px
